syntax = "proto3";

option java_multiple_files = true;
option java_package = "dim.tech.res.netty.protobuf.function";

package dimu.tech.netty.rpc;

message CurrentReq {
	string product_id = 1;
	string device_name = 2;
	string type = 3;
}

message SingleFunction {
	string identifier = 1;
	int64 time = 2;
	string value = 3;
	string data_type = 4;
}

message CurrentRes {
	int32 code = 1;
	string msg = 2;
	repeated SingleFunction data = 3;
}



